--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta property="og:image" content="gen.png">
     <title>Генератор библейских стихов</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&family=Crimson+Text:ital@0;1&family=Raleway:wght@300;400;700&family=Cormorant+Garamond:wght@300;400;600&family=Lora:wght@400;600&display=swap" rel="stylesheet">
     <style>
