--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>📖 Генератор библейских стихов</h1>
+            <h1>📖 Фото генератор библейских стихов</h1>
             <p>Создавайте красивые картинки за минуту</p>
         </div>
         <div class="main-content">
@@ -1187,4 +1187,5 @@
         initCanvas();
     </script>
 </body>
+
 </html>
